# scarlett

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Asset/Configs/: application.json
Asset/Scenes/: Box.fbx  robot-max-animation.FBX  robot-max.FBX  robot-v2.blend  robot-v2.fbx
Asset/Shaders/: common.fxh  debug.ps  debug.vs  gl_debug.ps  gl_debug.vs  gl_pbr.ps  gl_pbr.vs  pbr.ps  pbr.vs  pbr_common.fxh  pbr_skin.ps  pbr_skin.vs  skybox.ps  skybox.vs  terrain_low.ps  terrain_low.vs  ui.ps  ui.vs
Asset/Textures/skybox/: output_iem.dds  output_pmrem.dds  output_skybox.dds
Cmake/: Common.cmake  CrossGuidPlatformDependencies.cmake  EngineConfig.h  EngineConfig.h.in  Macos.cmake  TargetArchDetect.cmake  Windows.cmake
Engine/: CMakeLists.txt
Engine/Sources/Foundation/: Archtect.h  Assert.h  BuildType.h  Platform.h
Engine/Sources/Programs/: CMakeLists.txt  Game.cpp
Engine/Sources/Runtime/Core/Application/: Application.cpp  Application.h  AssetFinder.cpp  AssetFinder.h  GlobalConfig.cpp  GlobalConfig.h  IApplication.h  WindowsApplication.cpp  WindowsApplication.h
Engine/Sources/Runtime/Core/Debug/: DebugWindow.cpp  DebugWindow.h
Engine/Sources/Runtime/Core/Font/: FontMgr.cpp  FontMgr.h
Engine/Sources/Runtime/Core/Input/: InputMgr.cpp  InputMgr.h
Engine/Sources/Runtime/Core/Math/: Matrix.h  ScltMath.h  Vector.h  common.h
Engine/Sources/Runtime/Core/Memory/: Allocator.cpp  Allocator.h  MemoryManager.cpp  MemoryManager.h
Engine/Sources/Runtime/Core/Object/: Entity.cpp  Entity.h  World.cpp  World.h
Engine/Sources/Runtime/Core/Object/Components/: CameraComponent.cpp  CameraComponent.h  LightComponent.cpp  LightComponent.h  MeshRenderComponent.cpp  MeshRenderComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  SkeletonComponent.cpp  SkeletonComponent.h  TerrainComponent.cpp  TerrainComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Sources/Runtime/Core/Object/System/: AnimationSystem.cpp  AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  LightSystem.cpp  LightSystem.h  MeshRenderSystem.cpp  MeshRenderSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderDebugSystem.cpp  RenderDebugSystem.h  TerrainSystem.cpp  TerrainSystem.h
Engine/Sources/Runtime/Core/Physics/: AABB.cpp  AABB.h  BoardPhase.cpp  BoardPhase.h  Collider.cpp  Collider.h  Contact.cpp  Contact.h  Inertia.cpp  Inertia.h  IntegratePhase.cpp  IntegratePhase.h  Jacobian.cpp  Jacobian.h  NarrowPhase.cpp  NarrowPhase.h  ResolutionPhase.cpp  ResolutionPhase.h  RigidBody.cpp  RigidBody.h
Engine/Sources/Runtime/Core/ScriptEngine/: ScriptEngine.cpp  ScriptEngine.h
Engine/Sources/Runtime/Core/Time/: TimeMgr.cpp  TimeMgr.h
Engine/Sources/Runtime/Core/UI/: AutoReleasePool.cpp  AutoReleasePool.h  Director.cpp  Director.h  Dispatcher.cpp  Dispatcher.h  Event.cpp  Event.h  FontNode.cpp  FontNode.h  Listener.cpp  Listener.h  Node.cpp  Node.h  Ref.cpp  Ref.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h
Engine/Sources/Runtime/Interface/: IComponent.h  IModule.h  IResource.h  IShader.h  ISystem.h
Engine/Sources/Runtime/RHI/: BlendState.h  DepthStencilState.h  GraphicsMgr.h  GraphicsMgrD11.cpp  GraphicsMgrD11.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.h  RenderMesh.cpp  RenderMesh.h  RenderObject.cpp  RenderObject.h  SamplerState.cpp  SamplerState.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
Engine/Sources/Runtime/RHI/D11/: BlendStateD11.cpp  BlendStateD11.h  DDSTextureLoader.cpp  DDSTextureLoader.h  DepthStencilStateD11.cpp  DepthStencilStateD11.h  GraphicsMgrD11.cpp  GraphicsMgrD11.h  IndexBufferD11.cpp  IndexBufferD11.h  MaterialD11.cpp  MaterialD11.h  MeshD11.cpp  MeshD11.h  RenderMeshD11.cpp  RenderMeshD11.h  SamplerStateD11.cpp  SamplerStateD11.h  ShaderD11.cpp  ShaderD11.h  TextureD11.cpp  TextureD11.h  VertexBufferD11.cpp  VertexBufferD11.h
Engine/Sources/Runtime/RHI/opengl/: GraphicsMgrGL.cpp  GraphicsMgrGL.h  IndexBufferGL.cpp  IndexBufferGL.h  MaterialGL.cpp  MaterialGL.h  MeshGL.cpp  MeshGL.h  RenderMeshGL.cpp  RenderMeshGL.h  ShaderGL.cpp  ShaderGL.h  VertexBufferGL.cpp  VertexBufferGL.h
Engine/Sources/Runtime/Utils/: Convert.h  ImageParser.cpp  ImageParser.h  Logging.h  Singleton.h
Tests/: CMakeLists.txt  Test_Assimp.cpp  Test_Freetype2.cpp  Test_GMemoryMananger.cpp  Test_Guid.cpp  Test_Math.cpp  Test_Objects.cpp
Tests/Windows/: CMakeLists.txt  Test_D2D.cpp  Test_D3D.cpp  Test_GL.cpp  copy.pso  copy.vso  mathbase.h
